# Ferrugem-Ocorrencia

./: .gitignore  Pipfile  README.md  config.cfg.example  config.py  constants.py  grid_search_results_195202.csv  main.py  pyproject.toml  resultados.csv  resultados_ensemble.csv  threshold.py  visualization.py
calculation/: coordinates.py  dates.py  precipitation.py  severity.py  spatial.py  threshold.py
data_preparation/: constants.py  features.py  features_with_augmentation.py  features_with_zero.py  import_city_shapefiles.py  import_cptec_precipitation.py  import_soybean_areas.py  instances.py  precipitation.py  prepare_ferrugem_ocorrencia_features.py  prepare_ferrugem_ocorrencia_instances.py  prepare_precipitation.py  prepare_severity_model.py  prepare_severity_per_occurrence.py  severity.py
helpers/: feature_importance.py  input_output.py  result.py
modelos_por_safra/: XGB_classificador_temp_2004.pkl  XGB_classificador_temp_2005.pkl  XGB_classificador_temp_2006.pkl  XGB_classificador_temp_2007.pkl  XGB_classificador_temp_2008.pkl  XGB_classificador_temp_2009.pkl  XGB_classificador_temp_2010.pkl  XGB_classificador_temp_2011.pkl  XGB_classificador_temp_2012.pkl  XGB_classificador_temp_2013.pkl  XGB_classificador_temp_2014.pkl  XGB_classificador_temp_2015.pkl  XGB_classificador_temp_2016.pkl  XGB_classificador_temp_2017.pkl  XGB_classificador_temp_2018.pkl  XGB_classificador_temp_2019.pkl  XGB_classificador_temp_2020.pkl  XGB_classificador_temp_2021.pkl  XGB_classificador_temp_2022.pkl
modelos_regressao/: XGB_regressor_safra_2004.pkl  (+18 more)
notebook/: Datasets.ipynb  (+6 more)
(+46 files in other folders)
